responsywny front, wyszukiwarka

--- a/Inverter/MainPage.xaml
+++ b/Inverter/MainPage.xaml
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Inverter.MainPage"  BackgroundColor="Black">
+             x:Class="Inverter.MainPage"  BackgroundColor="Transparent">
 
     <ContentPage.Resources>
-        <Style TargetType="Editor">
+        <Style TargetType="Button">
             <Setter Property="FontSize" Value="{Binding FontSize}"/>
+            <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
+            <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"/>
             <Setter Property="VisualStateManager.VisualStateGroups">
                 <VisualStateGroupList>
                     <VisualStateGroup>
@@ -17,37 +19,17 @@
                         </VisualState>
                         <VisualState x:Name="Normal">
                             <VisualState.Setters>
-                                <Setter Property="BackgroundColor" Value="Transparent"/>
-                            </VisualState.Setters>
-                        </VisualState>
-                        <VisualState x:Name="Focused">
-                            <VisualState.Setters>
-                                <Setter Property="BackgroundColor" Value="LightGreen"/>
+                                <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
                             </VisualState.Setters>
                         </VisualState>
                     </VisualStateGroup>
                 </VisualStateGroupList>
             </Setter>
         </Style>
-        <Style TargetType="Button">
+        <Style TargetType="Label">
             <Setter Property="FontSize" Value="{Binding FontSize}"/>
-            <Setter Property="VisualStateManager.VisualStateGroups">
-                <VisualStateGroupList>
-                    <VisualStateGroup>
-                        <VisualState x:Name="PointerOver">
-                            <VisualState.Setters>
-                                <Setter Property="BackgroundColor" Value="LightGreen"/>
-                                <Setter Property="Opacity" Value="0.9"/>
-                            </VisualState.Setters>
-                        </VisualState>
-                        <VisualState x:Name="Normal">
-                            <VisualState.Setters>
-                                <Setter Property="BackgroundColor" Value="WhiteSmoke"/>
-                            </VisualState.Setters>
-                        </VisualState>
-                    </VisualStateGroup>
-                </VisualStateGroupList>
-            </Setter>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
         </Style>
     </ContentPage.Resources>
 
@@ -55,8 +37,8 @@
         <VerticalStackLayout>
 
             <HorizontalStackLayout HorizontalOptions="Center">
-                <Image Source="pkblack.png" HeightRequest="85"/>
-                <Image Source="wieikblack.png" HeightRequest="75"/>
+                <Image Source="{AppThemeBinding Light=pk.png,Dark=pkblack.png}" HeightRequest="75"/>
+                <Image Source="{AppThemeBinding Light=wieik.png,Dark=wieikblack.png}" HeightRequest="75"/> 
             </HorizontalStackLayout>
             <Label Text="Politechnika Krakowska" HorizontalOptions="Center" FontSize="Title"/>
             <Label Text="Wydział Inżynierii Elektrycznej i Komputerowej" HorizontalOptions="Center" FontSize="Title"/>
@@ -102,7 +84,7 @@
                 </VisualStateManager.VisualStateGroups>
                 <VerticalStackLayout >
                     <Label Text="Praca Dyplomowa: &#10;Sławomir Smoter" FontSize="5"/>
-                    <Image Source="easteregg.gif" IsAnimationPlaying="True" HeightRequest="50"/>
+                    <!--<Image Source="easteregg.gif" IsAnimationPlaying="True" HeightRequest="50"/>-->
                 </VerticalStackLayout>
             </Frame>
         </VerticalStackLayout>
