--- a/Inverter/Sets/ReadySetsV.xaml
+++ b/Inverter/Sets/ReadySetsV.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Inverter.Sets.ReadySetsV"
+             x:Class="Inverter.Sets.ReadySetsV" BackgroundColor="Transparent"
              Title="Gotowe Projekty">
 
     <ContentPage.Resources>
@@ -9,6 +9,8 @@
             <Setter Property="FontSize" Value="{Binding FontSize}"/>
             <Setter Property="Margin" Value="5"/>
             <Setter Property="AutoSize" Value="TextChanges"/>
+            <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
+            <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
             <Setter Property="VisualStateManager.VisualStateGroups">
                 <VisualStateGroupList>
                     <VisualStateGroup>
@@ -20,7 +22,7 @@
                         </VisualState>
                         <VisualState x:Name="Normal">
                             <VisualState.Setters>
-                                <Setter Property="BackgroundColor" Value="Transparent"/>
+                                <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
                             </VisualState.Setters>
                         </VisualState>
                         <VisualState x:Name="Focused">
@@ -34,8 +36,8 @@
         </Style>
         <Style TargetType="Button">
             <Setter Property="FontSize" Value="{Binding FontSize}"/>
-            <Setter Property="Margin" Value="1"/>
-            <Setter Property="Padding" Value="10"/>
+            <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
+            <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"/>
             <Setter Property="VisualStateManager.VisualStateGroups">
                 <VisualStateGroupList>
                     <VisualStateGroup>
@@ -43,13 +45,11 @@
                             <VisualState.Setters>
                                 <Setter Property="BackgroundColor" Value="LightGreen"/>
                                 <Setter Property="Opacity" Value="0.9"/>
-                                <Setter Property="TextColor" Value="Black"/>
                             </VisualState.Setters>
                         </VisualState>
                         <VisualState x:Name="Normal">
                             <VisualState.Setters>
-                                <Setter Property="BackgroundColor" Value="White"/>
-                                <Setter Property="TextColor" Value="Black"/>
+                                <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
                             </VisualState.Setters>
                         </VisualState>
                     </VisualStateGroup>
@@ -59,22 +59,18 @@
         <Style TargetType="Label">
             <Setter Property="FontSize" Value="{Binding FontSize}"/>
             <Setter Property="Margin" Value="5"/>
-            <Setter Property="VisualStateManager.VisualStateGroups">
-                <VisualStateGroupList>
-                    <VisualStateGroup>
-                        <VisualState x:Name="Normal">
-                            <VisualState.Setters>
-                                <Setter Property="FontSize" Value="{Binding FontSize}"/>
-                            </VisualState.Setters>
-                        </VisualState>
-                    </VisualStateGroup>
-                </VisualStateGroupList>
-            </Setter>
+            <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
+        </Style>
+        <Style TargetType="SearchBar">
+            <Setter Property="FontSize" Value="{Binding FontSize}"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"/>
         </Style>
         <Style TargetType="Grid">
+            <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Gray900}}"/>
             <Setter Property="VisualStateManager.VisualStateGroups">
                 <VisualStateGroupList>
-                    <VisualStateGroup>
+                    <VisualStateGroup x:Name="CommonStates">
                         <VisualState x:Name="PointerOver">
                             <VisualState.Setters>
                                 <Setter Property="BackgroundColor" Value="LightGreen"/>
@@ -82,12 +78,12 @@
                         </VisualState>
                         <VisualState x:Name="Normal">
                             <VisualState.Setters>
-                                <Setter Property="BackgroundColor" Value="Transparent"/>
+                                <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Gray900}}"/>
                             </VisualState.Setters>
                         </VisualState>
                         <VisualState x:Name="Selected">
                             <VisualState.Setters>
-                                <Setter Property="BackgroundColor" Value="LightGreen"/>
+                                <Setter Property="BackgroundColor" Value="Green"/>
                             </VisualState.Setters>
                         </VisualState>
                     </VisualStateGroup>
@@ -103,20 +99,24 @@
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
 
-        <CollectionView x:Name="cvInverterDatas" ItemsSource="{Binding InverterDatas}" SelectionMode="Single" SelectedItem="{Binding SelectedData}">
+        <HorizontalStackLayout x:Name="hslButtons">
+            <Button Text="Usuń" x:Name="bDelete" Clicked="bDelete_Clicked"/>
+            <Button Text="Wczytaj" x:Name="bLoad" Clicked="bLoad_Clicked"/>
+            <SearchBar Placeholder="Szukaj" x:Name="sbFind" PropertyChanged="sbFind_PropertyChanged"/>
+        </HorizontalStackLayout>
+
+        <CollectionView x:Name="cvInverterDatas" ItemsSource="{Binding InverterDatas}" SelectionMode="Single" SelectedItem="{Binding SelectedData}" >
+            <CollectionView.ItemsLayout>
+                <GridItemsLayout Orientation="Vertical"/>
+            </CollectionView.ItemsLayout>
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                        <Grid ColumnDefinitions="*" RowSpacing="10">
-                        <Label Grid.Column="0" Text="{Binding Name}">
-                        </Label>
+                    <Grid>
+                        <Label Text="{Binding Name}"/>
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-        <HorizontalStackLayout x:Name="hslButtons">
-             <Button Text="Usuń" x:Name="bDelete" Clicked="bDelete_Clicked"/>
-             <Button Text="Wczytaj" x:Name="bLoad" Clicked="bLoad_Clicked"/>
-        </HorizontalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
     
