--- a/Inverter/GenerateInverter/Views/GenerateInverterV.xaml
+++ b/Inverter/GenerateInverter/Views/GenerateInverterV.xaml
@@ -124,7 +124,7 @@
                 <Grid
                 Grid.Row="1"           
                 Grid.Column="0"
-                ColumnDefinitions="*" 
+                ColumnDefinitions="auto" 
                 RowSpacing="2" RowDefinitions="auto,*,*,*,*,*,*,*,*,*,*,*,*">
                     <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Konfiguracja parametrów:"/>
 
@@ -207,7 +207,7 @@
                         </Grid>
                     </Frame>
                     <Frame Grid.Row="12" Grid.Column="0"  CornerRadius="0" ToolTipProperties.Text="Typ pracy falownika &#10;0-Fala prostokatna&#10;1-PWM">
-                        <Grid ColumnDefinitions=".5*,*"   RowDefinitions="*,1">
+                        <Grid ColumnDefinitions="auto,auto"   RowDefinitions="*,1">
                             <Label Grid.Column="0" Text="K: "  />
                             <ListView  Grid.Column="1" MaximumHeightRequest="50"
                                        ItemsSource="{Binding InverterM.KNotify}"  SelectedItem="{Binding InverterM.SelectedKNotify}" >
